Archive/4f5f69a0217d2689ccc7ca31b940ee67-b9c56c160433c6ec12c50b91c3cb852e/output
+ g++ -std=c++1y -O3 -Wall -Wextra -Woverloaded-virtual -pedantic-errors -pthread main.cpp
main.cpp:3:37: error: ‘struct std::enable_if<sizeof (T)>’ is not a valid type for a template non-type parameter
 template <typename T, typename std::enable_if<sizeof(T) > sizeof(int), int>::type...>
                                     ^
main.cpp:3:59: error: expected ‘>’ before ‘sizeof’
 template <typename T, typename std::enable_if<sizeof(T) > sizeof(int), int>::type...>
                                                           ^
main.cpp:3:76: error: ‘type’ in namespace ‘::’ does not name a type
 template <typename T, typename std::enable_if<sizeof(T) > sizeof(int), int>::type...>
                                                                            ^
